# cover_song_similarity

./: .gitignore  README.md  pyproject.toml
data/: cover_song_features.csv
scripts/: data_builder.py  data_builder_expanded.py  get_distances.py  train.py
src/linear_ae/: __init__.py  autoencoder.py  dataset.py  linear.py  model.py
